--- a/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
+++ b/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
@@ -13,54 +13,6 @@
     tools:context="com.fsociety.projects.odinv01.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:text="Odin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
-        android:id="@+id/textView4"
-        android:textSize="40sp" />
-
-    <TextView
-        android:text="Sua enciclopédia de nomes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:id="@+id/textView5"
-        android:textSize="20sp" />
-
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/colorBackgroundFloating"
-        android:theme="?attr/actionBarTheme"
-        android:minHeight="?attr/actionBarSize"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:id="@+id/toolbar7" />
-
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignTop="@+id/toolbar7"
-        android:layout_centerHorizontal="true"
-        android:layout_alignBottom="@+id/toolbar7" />
-
-    <Button
-        android:text="Pesquisar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar7"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_marginTop="54dp"
-        android:id="@+id/button9"
-        android:background="@android:color/holo_blue_light" />
-
     <Button
         android:text="Sorte"
         android:layout_width="wrap_content"
@@ -69,4 +21,52 @@
         android:layout_alignEnd="@+id/textView5"
         android:id="@+id/button10"
         android:background="@android:color/holo_blue_light" />
+
+    <Button
+        android:text="Pesquisar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="108dp"
+        android:id="@+id/button9"
+        android:background="@android:color/holo_blue_light"
+        android:layout_below="@+id/textView5"
+        android:layout_alignStart="@+id/textView5" />
+
+    <TextView
+        android:text="Odin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Sua enciclopédia de nomes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:id="@+id/textView5"
+        android:textSize="18sp"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true" />
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:theme="?attr/actionBarTheme"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:id="@+id/toolbar2" />
+
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/toolbar2"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/toolbar2" />
+
 </RelativeLayout>
