Adicionado 2 linhas de codigo
linhas de código search view.

--- a/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
+++ b/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
@@ -67,6 +67,9 @@
         android:layout_height="match_parent"
         android:layout_alignTop="@+id/toolbar2"
         android:layout_centerHorizontal="true"
-        android:layout_alignBottom="@+id/toolbar2" />
+        android:layout_alignBottom="@+id/toolbar2"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        />
 
 </RelativeLayout>
