--- a/beta/OdinV0.1/app/src/main/res/layout/activity_base_firebase2.xml
+++ b/beta/OdinV0.1/app/src/main/res/layout/activity_base_firebase2.xml
@@ -10,4 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.fsociety.projects.odinv01.BaseFirebase2">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView2" />
 </RelativeLayout>
