--- a/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
+++ b/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
@@ -41,22 +41,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="Sua enciclopédia de nomes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:id="@+id/textView5"
-        android:textSize="18sp"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MASCULINOS"
         android:id="@+id/btnMasculinos"
-        android:layout_marginTop="133dp"
+        android:layout_marginTop="11dp"
         android:width="175dp"
         android:height="70dp"
         android:background="#42a1f3"
@@ -67,7 +57,7 @@
         android:clickable="true"
         android:enabled="true"
         android:singleLine="false"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/btnFemininos"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
@@ -83,9 +73,19 @@
         android:background="#e96d71"
         android:textAlignment="center"
         android:clickable="true"
-        android:layout_marginTop="63dp"
-        android:layout_below="@+id/button9"
+        android:layout_marginTop="44dp"
+        android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="Sua enciclopédia de nomes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:id="@+id/textView5"
+        android:textSize="18sp"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
