--- a/beta/OdinV0.1/app/src/main/res/menu/activity_main_drawer.xml
+++ b/beta/OdinV0.1/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,11 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Como Funciona?" />
+            android:title="Tire um print" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Versão Beta" />
+            android:title="Seja um Beta" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
@@ -25,7 +25,7 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Compartilhe com um amigp" />
+                android:title="Compartilhar" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
