--- a/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
+++ b/beta/OdinV0.1/app/src/main/res/layout/content_main.xml
@@ -88,4 +88,13 @@
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:text="FSociety"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
+        android:id="@+id/textView2" />
+
 </RelativeLayout>
